load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "exec_util.go",
        "fs_util.go",
        "zfs.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/zfs",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metrics:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
