load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "nats_publisher.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/pkg/notification/nats",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/notification:go_default_library",
        "//pkg/types:go_default_library",
        "//vendor/github.com/nats-io/gnatsd/server:go_default_library",
        "//vendor/github.com/nats-io/gnatsd/test:go_default_library",
        "//vendor/github.com/nats-io/go-nats:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["nats_publisher_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/notification:go_default_library",
        "//pkg/types:go_default_library",
        "//vendor/github.com/nats-io/gnatsd/server:go_default_library",
        "//vendor/github.com/nats-io/gnatsd/test:go_default_library",
    ],
)
