load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "branch.go",
        "checkout.go",
        "clone.go",
        "cluster.go",
        "commit.go",
        "debug.go",
        "dot.go",
        "init.go",
        "list.go",
        "log.go",
        "main.go",
        "mount.go",
        "pull.go",
        "push.go",
        "remote.go",
        "reset.go",
        "s3.go",
        "switch.go",
        "utils.go",
        "version.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/aws/aws-sdk-go/aws:go_default_library",
        "//github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//github.com/blang/semver:go_default_library",
        "//github.com/coreos/etcd/client:go_default_library",
        "//github.com/dotmesh-io/dotmesh/cmd/dm/pkg/pki:go_default_library",
        "//github.com/dotmesh-io/dotmesh/cmd/dm/pkg/remotes:go_default_library",
        "//github.com/howeyc/gopass:go_default_library",
        "//github.com/mitchellh/go-homedir:go_default_library",
        "//github.com/spf13/cobra:go_default_library",
        "//golang.org/x/crypto/scrypt:go_default_library",
        "//golang.org/x/net/context:go_default_library",
        "//golang.org/x/sys/unix:go_default_library",
    ],
)
