load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "remotes.go",
    ],
    importpath = "github.com/dotmesh-io/dotmesh/cmd/dm/pkg/remotes",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/dm/vendor/github.com/gorilla/rpc/v2/json2:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go:go_default_library",
        "//vendor/github.com/opentracing/opentracing-go/log:go_default_library",
        "//vendor/github.com/openzipkin/zipkin-go-opentracing/examples/middleware:go_default_library",
        "//cmd/dm/vendor/golang.org/x/net/context:go_default_library",
        "//cmd/dm/vendor/gopkg.in/cheggaaa/pb.v1:go_default_library",
    ],
)
