load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")
go_library(
    name = "go_default_library",
    srcs = ["flexvolume.go"],
    importpath = "github.com/dotmesh-io/dotmesh/cmd/dotmesh-server/pkg/dind-flexvolume",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "dind-flexvolume",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)